[tool.poetry]
name = "sleep_sort"
version = "0.1.0"
description = "asyncio implementation of sleep sort"
authors = ["Tim Hopper <tdhopper@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
